[project]
name = "tubes-visdat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "streamlit>=1.30.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "matplotlib>=3.7.0",
    "wordcloud>=1.9.0",
]
